whitespace fix

--- a/css/style.css
+++ b/css/style.css
@@ -67,12 +67,13 @@ A:hover {text-decoration: underline}
   margin: 0px;
   background-color: #102955;
   color:rgba(255, 255,255, 0.5);
-  box-shadow: 0px 3px 3px #999;
   text-shadow: 1px 2px 5px rgba(0,0,0,0.5);
 }
 .headerbox a {
   color:rgba(128, 128, 255, 0.8);
-
+}
+.headerbox p {
+  margin: 0px;
 }
 .content-storage {
   display:none;
